@@ -3,6 +3,8 @@
  * added slapt-get source to example slapt-getrc
  * updated source creation script, runs PACKAGESTXT and MD5 on all now
  * added --disable-dep-check to skip the dependency checking
+ * added support for ROOT enviroment variable for location of packages logs 
+   overriding /var/log/packages ("Keary Griffin" <keary.griffin@unwiredappeal.com>)
 
 0.9.7h Dec 08, 2003
  * updated FAQ
